--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "hamburgers": "^1.2.1",
     "hooper": "^0.3.4",
     "i": "^0.3.6",
     "node-sass": "^4.14.1",
@@ -17,6 +18,7 @@
     "swiper": "^6.8.4",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-hamburgers": "^1.1.2",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
