--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-hamburgers": "^1.1.2",
-    "vue-router": "^3.5.1"
+    "vue-notification": "^1.3.20",
+    "vue-router": "^3.5.1",
+    "vue2-editor": "^2.10.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
